--- a/web-pacman/index.html
+++ b/web-pacman/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pacman Website</title>
 </head>
-<body>
+
+<body style="margin: 0px; background-color: black;">
     <canvas id="canvas" width="500" height="500"></canvas>
     <div style="display: none">
         <img id="animations" src="source/animations.gif" alt="">
@@ -15,4 +17,5 @@
     <script src="pacman.js"></script>
     <script src="game.js"></script>
 </body>
+
 </html>
